Update before branch

--- a/firmware/hlib/intro.dox
+++ b/firmware/hlib/intro.dox
@@ -1,5 +1,5 @@
 /**
- * @mainpage
+ * @mainpage Home
 # Introduction
 
 The aim of HLib project is to build up an eco-system for applying embedded system into real world. The eco-system includes an open hardware library,
